Bitcoin reaaranged and bug fixed

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=utf-8" />
-    <meta content="bitcoin" key='bitcoin'>
-    <meta content='bitcoin' description='buy bitcoin, sell bitcoin, exchange bitcoin'>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="buy bitcoin, sell bitcoin, exchange bitcoin">
+    <meta name="keywords" content="bitcoin">
+    <meta name="author" content="Michael King">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="apple-touch-icon" sizes="180x180" href="Resources/images/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="Resources/images/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="Resources/images/favicon_io/favicon-16x16.png">
-    <link href="https://fonts.googleapis.com/css?family=Cardo:400,700|Oswald" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -23,7 +24,9 @@
         <div class="all--contents">
             <div class="line"></div>
             <div class='wrapper-all'>
-               <!------------------------- BIG COIN WRAPPER COVER ------------------------->
+
+               <!--BIG COIN WRAPPER COVER -->
+
                 <div class="bitcoin-big-wrapper">
                     <div class="center-position">
                         <div class="center">
@@ -91,7 +94,9 @@
                     </div>
 
                 </div>
-                <!-----------------------------------TEXTS AND MAIN SECTION ------------------>
+
+                <!--TEXTS AND MAIN SECTION -->
+
                 <div class="section-container">
                     <div class="main--section">
                         <div class="flex--contents">
@@ -111,7 +116,9 @@
                                 </div>
 
                             </section>
-                            <!-----------------------------FALLING COINS INSIDE WALLET------------->
+
+                            <!--FALLING COINS INSIDE WALLET-->
+
                             <div class="img--accept">
                                 <div class="wallet--svg">
                                     <svg id="wallet" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400.04 757.21">
@@ -137,7 +144,7 @@
                                                 <path id="path" class="small--path" d="M966.87 478.3a25.93 25.93 0 0 1 25.85 25.84V536a25.94 25.94 0 0 1-25.85 25.85z" transform="translate(-473.95 58.05)" fill="#cdaf75" stroke="#fff" />
                                                 <path id="holder" class="holder" d="M900.43 520.05a13.54 13.54 0 0 1-13.54 13.54c-7.48 0-7.48-27.08 0-27.08a13.54 13.54 0 0 1 13.54 13.54z" transform="translate(-473.95 58.05)" fill="#636363" stroke="#fff" />
                                                 <ellipse id="holder-2" class="holder--2" data-name="holder" cx="413.66" cy="578.1" rx="6.49" ry="13.54" fill="#d8d7d6" stroke="#fff" />
-                                                <rect x="98.9" y="476.06" width="366.7" class="cls dot" height="223.97" rx="12" stroke-dasharray="12.09 12.09" , stroke-width="2" strokeDashoffset="13" stroke="#fff" fill="none" id="dot--lines" />
+                                                <rect x="98.9" y="476.06" width="366.7" class="cls dot" height="223.97" rx="12" stroke-dasharray="12.09 12.09" stroke-width="2" stroke="#fff" fill="none" id="dot--lines" />
                                             </g>
 
                                         </g>
@@ -145,7 +152,9 @@
                                 </div>
                             </div>
                         </div>
-                        <!--------------------------COIN ROTATION ----------------------->
+
+                        <!--COIN ROTATION -->
+
                         <div class="flip">
                             <div class="center">
                                 <svg id="spin--coin" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 800 700">
@@ -155,7 +164,9 @@
 
 
                         </div>
-                        <!-------------------------------------IMAGES COIN----------------->
+
+                        <!--IMAGES COIN-->
+
                         <div class="border--highlight">
                             <div class="center">
                                 <div class="float">
@@ -163,13 +174,13 @@
                                         <li class="support">
                                             <h2>Currently supports</h2>
                                         </li>
-                                        <li class="image"><img src="Resources/images/bitcoin_PNG.png">
+                                        <li class="image"><img src="Resources/images/bitcoin_PNG.png" alt="bitcoin">
                                             <h3>bitcoin</h3>
                                         </li>
-                                        <li class="image"><img src="Resources/images/Ethereum.png">
+                                        <li class="image"><img src="Resources/images/Ethereum.png" alt="Ethereum">
                                             <h3>Ethereum</h3>
                                         </li>
-                                        <li class="image"><img src="Resources/images/Litecoin.png">
+                                        <li class="image"><img src="Resources/images/Litecoin.png" alt="litcoin">
                                             <h3>litcoin</h3>
                                         </li>
 
@@ -225,7 +236,7 @@
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
     <script src="Vendor/javaScript/DrawSVGPlugin.min.js"></script>
-    <script src='Resources/javaScript/main.js' type="text/javascript"></script>
+    <script src='Resources/javaScript/main.js'></script>
 
 
 </body>
