The navigation A-tag removed

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <span class="contents--words">
                         With Bit wallet, you can unleash your desktop, and let the powers of desktop widgets come to life! Even though bit wallet is free, we still need to store user-specific information, like which widgets you have installed, and where they are positioned. By logging in, we can save that information to your account, and allow you to have a better experience overall.<br><br><br>
                     </span>
-                    <a class="a2" href="#"> <button class="raise2">Homepage</button></a>
+                   <button class="raise2">Homepage</button>
                 </div>
             </div>
             <div class="slide--left2">
