Bug found in main page eliminated

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="buy bitcoin, sell bitcoin, exchange bitcoin">
     <meta name="keywords" content="bitcoin">
-    <meta name="author" content="Michael King">
+    <meta name="author" content="Michael Mabinuola">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="apple-touch-icon" sizes="180x180" href="Resources/images/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="Resources/images/favicon_io/favicon-32x32.png">
@@ -111,7 +111,7 @@
 
                                     <div class="button">
 
-                                        <a class="a" href="#"> <button class="raise">Get Started</button></a>
+                                        <button class="raise">Get Started</button>
                                     </div>
                                 </div>
 
